<resources>
    <string name="app_name">SerendibGuide</string>
    <string name="title_list_detail">list Detail</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>


    <!-- Brians-->

    <string name="sigiriya">Sigiriya</string>
    <string name="kandy">Kandy</string>
    <string name="galle">Galle</string>
    <string name="yala">Yala</string>
    <string name="horton">Horton Plains</string>
    <string name="ne">Nuwara Eliya</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_checklist">Checklist</string>


</resources>
