<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="iit.serendibguide.attractionsActivity"
    android:background="@color/black">

    <ImageButton
        android:onClick="switchToSigiriya"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageButton"
        android:background="@drawable/sigiriyabtn"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageButton2"
        android:background="@drawable/kandy"
        android:layout_alignTop="@+id/imageButton"
        android:layout_toRightOf="@+id/imageButton"
        android:layout_toEndOf="@+id/imageButton"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sigiriya"
        android:id="@+id/sigiriyaLabel"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_alignTop="@+id/kandyLabel"
        android:layout_alignLeft="@+id/imageButton"
        android:layout_alignStart="@+id/imageButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/kandy"
        android:id="@+id/kandyLabel"
        android:layout_below="@+id/imageButton2"
        android:layout_alignRight="@+id/imageButton2"
        android:layout_alignEnd="@+id/imageButton2"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:id="@+id/imageButton3"
        android:background="@drawable/galle"
        android:layout_below="@+id/sigiriyaLabel"
        android:layout_alignLeft="@+id/imageButton"
        android:layout_alignStart="@+id/imageButton" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageButton4"
        android:background="@drawable/yala"
        android:layout_alignTop="@+id/imageButton3"
        android:layout_alignLeft="@+id/imageButton2"
        android:layout_alignStart="@+id/imageButton2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/galle"
        android:id="@+id/galleLabel"
        android:layout_below="@+id/imageButton3"
        android:layout_alignLeft="@+id/sigiriyaLabel"
        android:layout_alignStart="@+id/sigiriyaLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/yala"
        android:id="@+id/yalaLabel"
        android:layout_alignTop="@+id/galleLabel"
        android:layout_alignLeft="@+id/kandyLabel"
        android:layout_alignStart="@+id/kandyLabel" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:id="@+id/imageButton5"
        android:background="@drawable/horton"
        android:layout_below="@+id/galleLabel"
        android:layout_alignLeft="@+id/imageButton3"
        android:layout_alignStart="@+id/imageButton3" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageButton6"
        android:background="@drawable/nuwaraeliya"
        android:layout_alignTop="@+id/imageButton5"
        android:layout_alignLeft="@+id/imageButton4"
        android:layout_alignStart="@+id/imageButton4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-20dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/horton"
        android:id="@+id/hortonLabel"
        android:layout_alignTop="@+id/neLabel"
        android:layout_alignLeft="@+id/sigiriyaLabel"
        android:layout_alignStart="@+id/sigiriyaLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="35dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ne"
        android:id="@+id/neLabel"
        android:layout_below="@+id/imageButton6"
        android:layout_alignLeft="@+id/imageButton6"
        android:layout_alignStart="@+id/imageButton6" />

</RelativeLayout>
